@@ -35,9 +35,9 @@
 
 
 GladeXML *gxml, *gxml_install_warning;
-const gchar *file_iso, *entry_usb_result, *combobox_device_result, *combobox_lang_result;
+const gchar *file_iso,  *combobox_device_result, *entry_cheat_result; //*entry_usb_result , *combobox_lang_result
 char glade_file_install_warn[1024];
-gboolean checkbutton_persist_result, checkbutton_toram_result;
+//gboolean checkbutton_persist_result, checkbutton_toram_result;
 
 
 void
@@ -72,25 +72,18 @@ create_install_warning (void)
 
 void
 on_button_install_clicked (GtkButton *button, 
-						   gpointer user_data)
+				gpointer user_data)
 {
 
 	GtkWidget *window = glade_xml_get_widget (gxml, "window");
 		
-	GtkWidget *entry_usb             = glade_xml_get_widget (gxml, "entry_usb");
 	GtkWidget *combobox_device       = glade_xml_get_widget (gxml, "combobox_device");
-	GtkWidget *combobox_lang         = glade_xml_get_widget (gxml, "combobox_lang");
+	GtkWidget *entry_cheat           = glade_xml_get_widget (gxml, "entry_cheat");
 	GtkWidget *filechooserbutton_iso = glade_xml_get_widget (gxml, "filechooserbutton_iso");
-	GtkWidget *checkbutton_persist   = glade_xml_get_widget (gxml, "checkbutton_persist");
-	GtkWidget *checkbutton_toram     = glade_xml_get_widget (gxml, "checkbutton_toram");
-	
-	entry_usb_result           = gtk_entry_get_text(GTK_ENTRY( entry_usb ) );
-	combobox_device_result     = gtk_combo_box_get_active_text(GTK_COMBO_BOX ( combobox_device ) );
-	combobox_lang_result       = gtk_combo_box_get_active_text(GTK_COMBO_BOX ( combobox_lang ) );
-	checkbutton_persist_result = gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON( checkbutton_persist ) );
-	checkbutton_toram_result   = gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON( checkbutton_toram ) );
 
-	
+	combobox_device_result     = gtk_combo_box_get_active_text(GTK_COMBO_BOX ( combobox_device ) );
+	entry_cheat_result         = gtk_entry_get_text( GTK_ENTRY ( entry_cheat  ) );
+
 	if( strncmp( getenv("FLL_DISTRO_MODE"), "live", 4 ) != 0 ) {
 		// installed mode
 		file_iso = gtk_file_chooser_get_filename( GTK_FILE_CHOOSER (filechooserbutton_iso) );
@@ -126,27 +119,30 @@ on_button_install_accepted_clicked(GtkButton *button,
 						   gpointer user_data)
 {
 
-	g_print("%s\n", entry_usb_result);
 	g_print("%s\n", combobox_device_result);
-	g_print("%s\n", combobox_lang_result);
-	if ( checkbutton_persist_result == TRUE ) {
-		g_print("persist=1\n");
-	}
-	else {
-		g_print("persist=0\n");
-	}
 
-	if ( checkbutton_toram_result == TRUE ) {
-		g_print("toram=1\n");
+	// if cheatcode entrybox is empty
+	if( strncmp( entry_cheat_result, "", 1 ) == 0 ) {
+		strncpy ( entry_cheat_result , "_", 1);
 	}
-	else {
-		g_print("toram=0\n");
-	}
+	g_print("%s\n", entry_cheat_result);
 
 	if( strncmp( getenv("FLL_DISTRO_MODE"), "live", 4 ) != 0 ) {
 		// installed mode
 		g_print("%s\n", file_iso);
 	}
 
+
 	gtk_main_quit ();
+}
+
+void
+on_button_cheat_clicked(GtkButton *button, 
+			gpointer user_data)
+{
+
+	system("[ -f \"/usr/share/sidux-manual/en/cheatcodes-en.htm\" ] && \
+		LINK=\"file:///usr/share/sidux-manual/en/cheatcodes-en.htm#cheatcodes\" || \
+		LINK=\"http://manual.sidux.com/en/cheatcodes-en.htm\"; \
+		x-www-browser ${LINK} &");
 }
