@@ -25,13 +25,13 @@
             <property name="pixbuf">install-usb-title.png</property>
           </widget>
           <packing>
-            <property name="x">300</property>
+            <property name="x">382</property>
             <property name="y">10</property>
           </packing>
         </child>
         <child>
           <widget class="GtkComboBox" id="combobox_device">
-            <property name="width_request">300</property>
+            <property name="width_request">440</property>
             <property name="height_request">32</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -44,7 +44,7 @@
         </child>
         <child>
           <widget class="GtkLabel" id="label_device">
-            <property name="width_request">150</property>
+            <property name="width_request">148</property>
             <property name="height_request">32</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -53,13 +53,14 @@
             <property name="use_markup">True</property>
           </widget>
           <packing>
+            <property name="x">5</property>
             <property name="y">170</property>
           </packing>
         </child>
         <child>
           <widget class="GtkLabel" id="label_info">
-            <property name="width_request">455</property>
-            <property name="height_request">40</property>
+            <property name="width_request">595</property>
+            <property name="height_request">35</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
             <property name="yalign">0</property>
@@ -74,7 +75,7 @@
         </child>
         <child>
           <widget class="GtkHSeparator" id="hseparator1">
-            <property name="width_request">455</property>
+            <property name="width_request">595</property>
             <property name="height_request">10</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -84,32 +85,17 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkEntry" id="entry_usb">
-            <property name="width_request">300</property>
-            <property name="height_request">32</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="max_length">16</property>
-            <property name="text" translatable="yes">sidux_fromUSB</property>
-          </widget>
-          <packing>
-            <property name="x">155</property>
-            <property name="y">130</property>
-          </packing>
-        </child>
-        <child>
           <widget class="GtkLabel" id="label_name">
-            <property name="width_request">150</property>
+            <property name="width_request">595</property>
             <property name="height_request">32</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="xalign">0</property>
-            <property name="label" translatable="yes">&lt;b&gt;Name&lt;/b&gt;</property>
+            <property name="label" translatable="yes">&lt;b&gt;&lt;i&gt;Use it at your own risk, it comes without any warranty.&lt;/i&gt;&lt;/b&gt;</property>
             <property name="use_markup">True</property>
+            <property name="justify">GTK_JUSTIFY_CENTER</property>
           </widget>
           <packing>
-            <property name="y">130</property>
+            <property name="y">125</property>
           </packing>
         </child>
         <child>
@@ -126,8 +112,8 @@
             <signal name="clicked" handler="on_button_install_clicked"/>
           </widget>
           <packing>
-            <property name="x">305</property>
-            <property name="y">425</property>
+            <property name="x">445</property>
+            <property name="y">450</property>
           </packing>
         </child>
         <child>
@@ -144,7 +130,7 @@
             <signal name="clicked" handler="gtk_main_quit"/>
           </widget>
           <packing>
-            <property name="y">425</property>
+            <property name="y">450</property>
           </packing>
         </child>
         <child>
@@ -158,24 +144,24 @@
             <property name="use_markup">True</property>
           </widget>
           <packing>
-            <property name="y">350</property>
+            <property name="y">368</property>
           </packing>
         </child>
         <child>
           <widget class="GtkFileChooserButton" id="filechooserbutton_iso">
-            <property name="width_request">454</property>
+            <property name="width_request">594</property>
             <property name="height_request">32</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
           </widget>
           <packing>
-            <property name="y">380</property>
+            <property name="y">400</property>
           </packing>
         </child>
         <child>
           <widget class="GtkFrame" id="frame1">
-            <property name="width_request">456</property>
-            <property name="height_request">92</property>
+            <property name="width_request">600</property>
+            <property name="height_request">145</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
             <child>
@@ -188,64 +174,47 @@
                     <property name="visible">True</property>
                     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                     <child>
-                      <widget class="GtkCheckButton" id="checkbutton_persist">
-                        <property name="width_request">95</property>
+                      <widget class="GtkLabel" id="label2">
+                        <property name="width_request">580</property>
+                        <property name="height_request">30</property>
+                        <property name="visible">True</property>
+                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                        <property name="xalign">0</property>
+                        <property name="yalign">0</property>
+                        <property name="label" translatable="yes">Example: &lt;b&gt;lang=de tz=Europe/Vienna persist toram &lt;/b&gt;</property>
+                        <property name="use_markup">True</property>
+                        <property name="selectable">True</property>
+                      </widget>
+                      <packing>
+                        <property name="y">58</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkEntry" id="entry_cheat">
+                        <property name="width_request">580</property>
                         <property name="height_request">32</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                        <property name="label" translatable="yes">persist</property>
-                        <property name="response_id">0</property>
-                        <property name="draw_indicator">True</property>
                       </widget>
                       <packing>
-                        <property name="x">5</property>
-                        <property name="y">5</property>
+                        <property name="y">87</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkCheckButton" id="checkbutton_toram">
-                        <property name="width_request">95</property>
+                      <widget class="GtkButton" id="button_cheat">
+                        <property name="width_request">150</property>
                         <property name="height_request">32</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                        <property name="tooltip" translatable="yes">save system changes to usb</property>
-                        <property name="label" translatable="yes">toram</property>
+                        <property name="label" translatable="yes">List of cheatcodes</property>
                         <property name="response_id">0</property>
-                        <property name="draw_indicator">True</property>
+                        <signal name="clicked" handler="on_button_cheat_clicked"/>
                       </widget>
                       <packing>
-                        <property name="x">5</property>
-                        <property name="y">36</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <widget class="GtkImage" id="image2">
-                        <property name="width_request">32</property>
-                        <property name="height_request">32</property>
-                        <property name="visible">True</property>
-                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                        <property name="tooltip" translatable="yes">persist=save system changes to usb</property>
-                        <property name="stock">gtk-info</property>
-                      </widget>
-                      <packing>
-                        <property name="x">100</property>
-                        <property name="y">5</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <widget class="GtkImage" id="image4">
-                        <property name="width_request">32</property>
-                        <property name="height_request">32</property>
-                        <property name="visible">True</property>
-                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                        <property name="tooltip" translatable="yes">toram=</property>
-                        <property name="stock">gtk-info</property>
-                      </widget>
-                      <packing>
-                        <property name="x">100</property>
-                        <property name="y">36</property>
+                        <property name="y">12</property>
                       </packing>
                     </child>
                   </widget>
@@ -256,7 +225,7 @@
               <widget class="GtkLabel" id="label1">
                 <property name="visible">True</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="label" translatable="yes">&lt;b&gt;Option&lt;/b&gt;</property>
+                <property name="label" translatable="yes">&lt;b&gt;Cheat codes&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
               </widget>
               <packing>
@@ -265,34 +234,7 @@
             </child>
           </widget>
           <packing>
-            <property name="y">255</property>
-          </packing>
-        </child>
-        <child>
-          <widget class="GtkLabel" id="label_language">
-            <property name="width_request">150</property>
-            <property name="height_request">32</property>
-            <property name="visible">True</property>
-            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="xalign">0</property>
-            <property name="label" translatable="yes">&lt;b&gt;Language&lt;/b&gt;</property>
-            <property name="use_markup">True</property>
-          </widget>
-          <packing>
-            <property name="y">212</property>
-          </packing>
-        </child>
-        <child>
-          <widget class="GtkComboBox" id="combobox_lang">
-            <property name="width_request">300</property>
-            <property name="height_request">32</property>
-            <property name="visible">True</property>
-            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="items" translatable="yes"></property>
-          </widget>
-          <packing>
-            <property name="x">155</property>
-            <property name="y">212</property>
+            <property name="y">220</property>
           </packing>
         </child>
       </widget>
